--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/ZabKoz/Project-X#readme",
   "dependencies": {
-    "discord.js": "^14.0.0-dev.1657411900-f0b68d5"
+    "chalk": "^4.1.2",
+    "discord.js": "^14.0.0-dev.1657411900-f0b68d5",
+    "dotenv": "^16.0.1",
+    "glob": "^7.2.0",
+    "ms": "^2.1.3",
+    "nodemon": "^2.0.19"
   }
 }
