--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-x",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "project-x.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "discord.js": "^14.0.0-dev.1657411900-f0b68d5",
     "dotenv": "^16.0.1",
     "glob": "^7.2.0",
+    "mongoose": "^6.4.4",
     "ms": "^2.1.3",
     "nodemon": "^2.0.19"
   }
