--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-x",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "project-x.js",
   "scripts": {
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/ZabKoz/Project-X#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "discord.js": "^14.0.0-dev.1657411900-f0b68d5",
+    "discord.js": "^14.0.0-dev.1657671090-1ed605e",
     "dotenv": "^16.0.1",
     "glob": "^7.2.0",
     "mongoose": "^6.4.4",
     "ms": "^2.1.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "unique": "^0.0.1"
   }
 }
