--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/ZabKoz/Project-X#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "discord.js": "^14.0.0-dev.1657671090-1ed605e",
+    "discord.js": "^14.0.3-dev.1658145896-b316ac7.0",
     "dotenv": "^16.0.1",
     "glob": "^7.2.0",
     "i18n": "^0.15.0",
